解析arguments参数以及增加通过我的文档打开应用的功能

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ channels/
 *.a
 client/iOS/Release-iphoneos/iFreeRDP.app.dSYM/Contents/Info.plist
 SCLAlertView/README.md
+SharedPrecompiledheaders/
